--- a/.env.exmaple
+++ b/.env.exmaple
@@ -3,3 +3,18 @@ PRIVATE_KEY=
 
 # Connection： Comma-separated list
 RPC_ENDPOINTS=https://api.mainnet-beta.solana.com,https://api.mainnet-beta.solana.com
+
+
+# swap settings
+#HTTP_PROXY=http://127.0.0.1:1087
+SLIPPAGE=10
+
+# jito settings
+JITO_BLOCK_ENGINE_URL=https://mainnet.block-engine.jito.wtf
+# https://docs.jito.wtf/lowlatencytxnsend/#websocket-showing-tip-amounts
+JITO_TIP_STREAM_URL=wss://bundles.jito.wtf/api/v1/bundles/tip_stream
+
+# only support: 25 50 75 95 99
+# ref https://jito-labs.metabaseapp.com/public/dashboard/016d4d60-e168-4a8f-93c7-4cd5ec6c7c8d
+JITO_TIP_PERCENTILE=50
+JITO_TIP_VALUE=          # float64, if set, JITO_TIP_PERCENTILE will be ignored
