--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 tracing-appender = "0.2.3"
 tokio = "1.43.0"
+serde = "1.0.203"
+serde_json = "1.0.117"
 
 [dependencies]
 jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git", package = "jupiter-swap-api-client" }
@@ -29,6 +31,14 @@ tracing-appender = { workspace = true }
 rand = "0.8.5"
 clap = { version = "4.5.26", features = ["derive"] }
 spl-token = "6.0.0"
+tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
+futures-util = "0.3.30"
+reqwest = { version = "0.11.27", features = ["json", "socks", "native-tls"] }
+serde = { workspace = true }
+serde_json = { workspace = true }
+indicatif = "0.17.8"
+jito-json-rpc-client = { git = "https://github.com/wisarmy/jito-block-engine-json-rpc-client.git", package = "jito-block-engine-json-rpc-client", branch = "v2.0" }
+bitflags = "2.7.0"
 
 
 [dev-dependencies]
