--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ indicatif = "0.17.8"
 jito-json-rpc-client = { git = "https://github.com/wisarmy/jito-block-engine-json-rpc-client.git", package = "jito-block-engine-json-rpc-client", branch = "v2.0" }
 bitflags = "2.7.0"
 rust_decimal = "1.36.0"
+uuid = { version = "1.12.0", features = ["v4"] }
 
 
 [dev-dependencies]
