add extra args for jupiter

--- a/.env.exmaple
+++ b/.env.exmaple
@@ -22,3 +22,4 @@ JITO_TIP_VALUE=          # float64, if set, JITO_TIP_PERCENTILE will be ignored
 
 
 JUP_QUOTE_API=https://quote-api.jup.ag/v6
+JUP_QUOTE_API_KEY=
